# WEB_IA

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
contrib/: dev.Dockerfile  env-sample
core/: admin.py  forms.py  models.py  urls.py  views.py
core/management/commands/: import_iris.py
core/migrations/: 0001_initial.py  0002_iris.py  0003_alter_iris_sepal_length_alter_iris_sepal_width.py
core/service/: memory.py  mind_map.py  sql_agent.py
core/static/core/js/: chat_bot.js  ia_answer.js  mind_map_list.js
core/templates/core/: base.html  chat_bot.html  home.html  mind_map_list.html  virtual_assistant.html
