[tool.poetry]
name = "ia"
version = "0.1.0"
description = "Aplicativos de IA"
authors = ["Fabio Freitas"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
